Изменён внешний порт для nginx на 8080

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,6 @@
         <li> Получать удобные прямые ссылки на загруженные изображения.</li>
     </ul>
     <button onclick="location.href='/upload'">Загрузить</button>
-    <button onclick="location.href='/images'">Посмотреть</button>
+    <button onclick="location.href='/images/'">Посмотреть</button>
 </body>
 </html>
