--- a/static/images/images.html
+++ b/static/images/images.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>All images</title>
+    <!-- Bootstrap core CSS -->
+    <link href="../bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this page -->
+    <link href="images.css" rel="stylesheet" media="screen">
 </head>
 <body>
-    <h1>All images</h1>
-    <div id="images">
+    <h1 class="text-center page-top">Галерея</h1>
+    <div class="container page-top">
+      <div id="images" class="row">
 
-    </div>
+       </div>
+  </div>
 </body>
-<script src="images.js"></script>
+    <script src="images.js"></script>
 </html>
