--- a/static/index.html
+++ b/static/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Image Hosting</title>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this project -->
+    <link href="image_hosting.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Image Hosting</h1>
-    <p>
-        Наш сервис — это не просто хранилище картинок. Это место, где
-        пользователи могут:
-    </p>
-    <ul>
-        <li> Загружать фотки в популярных форматах (.jpg, .png, .gif).</li>
-        <li> Быть уверенными, что ваши картинки надежно сохранены.</li>
-        <li> Получать удобные прямые ссылки на загруженные изображения.</li>
-    </ul>
-    <button onclick="location.href='/upload'">Загрузить</button>
-    <button onclick="location.href='/images/'">Посмотреть</button>
+<body class="bg-light">
+    <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">Image hosting</h1>
+          <p class="lead text-muted">Наш сервис — это не просто хранилище картинок. Это место, где вы можете:</p>
+          <ul class="list-group list-group-flush lead text-muted text-left">
+              <li class="list-group-item">загружать фотки в популярных форматах (.jpg, .png, .gif)</li>
+              <li class="list-group-item">быть уверенными, что ваши картинки надежно сохранены</li>
+              <li class="list-group-item">получать удобные прямые ссылки на загруженные изображения</li>
+          </ul>
+          <p>
+            <a href="#" onclick="location.href='/upload'" class="btn btn-primary my-2">Загрузить</a>
+            <a href="#" onclick="location.href='/images/'" class="btn btn-secondary my-2">Посмотреть</a>
+          </p>
+        </div>
+    </section>
 </body>
 </html>
